# datasette-template-sql

./: README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml
datasette_template_sql/: __init__.py
tests/: test_template_sql.py  utils.py
tests/test_templates/: database-news.html  index.html
